trunk/Archive2/0d/481db98c312e82/output
+ clang++ -std=c++11 -O3 -Wall -pedantic -pthread main.cpp
main.cpp:24:54: error: expected parameter declarator
      test_scanner( unsigned int avec = CtrlVec<'\n','\r'>::mask ) ;
                                                     ^
main.cpp:24:54: error: expected ')'
main.cpp:24:19: note: to match this '('
      test_scanner( unsigned int avec = CtrlVec<'\n','\r'>::mask ) ;
                  ^
main.cpp:24:53: error: expected '>'
      test_scanner( unsigned int avec = CtrlVec<'\n','\r'>::mask ) ;
                                                    ^
3 errors generated.
